Added header to examples

--- a/example00/index.html
+++ b/example00/index.html
@@ -4,14 +4,12 @@
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
-		<title>www.redips.net</title>
+		<title>Example 0: Minimal steps to enable content dragging in table</title>
 	</head>
 	<body onload="REDIPS.drag.init()">
 		<center>
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Example 0: Minimal steps to enable content dragging in table</h2>
-
 			<!-- tables inside this DIV could contain drag-able content  -->
 			<div id="drag">
 				<table>
