--- a/example18/index.html
+++ b/example18/index.html
@@ -3,15 +3,17 @@
 	<head>
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content/rows with JavaScript"/>
-		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+		<script type="text/javascript">
+			var redips_url = '/javascript/drag-and-drop-table-content-animation/';
+		</script>
+		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<title>www.redips.net</title>
+		<title>Example 18: Simple element animation</title>
 	</head>
 	<body>
 		<center>
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-animation/">www.redips.net</a></h1>
-			<h2>Example 18: Simple element animation</h2>
 			<!-- buttons -->
 			<div id="buttons">
 				<input type="button" value="Move" class="button" id="btn_move" onclick="javascript:move()"/>
