--- a/example02/index.html
+++ b/example02/index.html
@@ -4,16 +4,12 @@
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
-		<!-- initialize drag and drop -->
 		<script type="text/javascript" src="script.js"></script>
-		<title>www.redips.net</title>
+		<title>Example 2: Green and orange elements</title>
 	</head>
 	<body>
-		<center>
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Example 2: Green and orange elements</h2>
-		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
 			<table id="table1">
