--- a/example03/index_static.html
+++ b/example03/index_static.html
@@ -3,17 +3,16 @@
 	<head>
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
-		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+		<script type="text/javascript">
+			var redips_url = '/javascript/drag-and-drop-example-3/';
+		</script>
+		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
-		<!-- initialize drag and drop -->
 		<script type="text/javascript" src="script.js"></script>
-		<title>www.redips.net</title>
+		<title>Example 3: School timetable (static)</title>
 	</head>
 	<body>
-		<center>
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-example-3/">www.redips.net</a></h1>
-			<h2>Example 3: School timetable (static)</h2>
-		</center>
 		<div id="main_container">
 			<!-- tables inside this DIV could have draggable content -->
 			<div id="drag">
