--- a/example10/index.html
+++ b/example10/index.html
@@ -3,19 +3,13 @@
 	<head>
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
-		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
-		<title>www.redips.net</title>
-		<!-- initialize drag and drop -->
 		<script type="text/javascript" src="script.js"></script>
+		<title>Example 10: Sticky tables</title>
 	</head>
 	<body>
-
-		<center>
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Example 10: Sticky tables</h2>
-		</center>
-	
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">	
 			<div id="left">
