--- a/example15/index.html
+++ b/example15/index.html
@@ -3,16 +3,17 @@
 	<head>
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table rows with JavaScript"/>
-		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+		<script type="text/javascript">
+			var redips_url = '/javascript/drag-and-drop-table-row/';
+		</script>
+		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<title>www.redips.net</title>
+		<title>Example 15: Drag and drop table rows</title>
 	</head>
 	<body>
 		<center>
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-row/">www.redips.net</a></h1>
-			<h2>Example 15: Drag and drop table rows</h2>
-
 			<!-- tables inside this DIV could contain drag-able content  -->
 			<div id="drag">
 				<table class="tbl1">
