--- a/example16/index.html
+++ b/example16/index.html
@@ -3,21 +3,19 @@
 	<head>
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
-		<link rel="stylesheet" href="style-screen.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="style-print.css" type="text/css" media="print" />
+		<link rel="stylesheet" href="style-screen.css" type="text/css" media="screen"/>
+		<link rel="stylesheet" href="style-print.css" type="text/css" media="print"/>
+		<script type="text/javascript">
+			var redips_url = '/javascript/drag-and-drop-table-row/';
+		</script>
+		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<title>www.redips.net</title>
+		<title>Example 16: AJAX, hover, sticky, dragging</title>
 	</head>
 	<body>
 	    <!-- hidden div element needed for hover -->
     	<div id="hover_div" style="visibility:hidden; position:absolute; top:0; left:0;"></div>
-    	
-    	<!-- title -->
-    	<div class="title">
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-row/">www.redips.net</a></h1>
-			<h2>Example 16: AJAX, hover, sticky, dragging</h2>
-		</div>
 		
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
