--- a/example19/index.html
+++ b/example19/index.html
@@ -3,15 +3,14 @@
 	<head>
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content/rows with JavaScript"/>
-		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<title>www.redips.net</title>
+		<title>Example 19: Groups and table rows</title>
 	</head>
 	<body>
 		<center>
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Example 19: Groups and table rows</h2>
 			<!-- drag region -->
 			<div id="drag">
 				<table cellspacing="0" cellpadding="3" id="main" class="main">
