--- a/example14/index.html
+++ b/example14/index.html
@@ -12,6 +12,13 @@
 	<body>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
+			<!-- "shift" drop option with animation checkbox -->
+			<input type="radio" name="drop_option" class="checkbox" onclick="set_drop_option(this)" value="shift" title="Shift table content" checked="true"/> Shift
+			(<input type="checkbox" class="checkbox" onclick="toggle_animation(this)" title="Enable / disable animation" checked=""/>with animation)
+			<br/>
+			<!-- "switching" drop option -->
+			<input type="radio" name="drop_option" class="checkbox" onclick="set_drop_option(this)" value="switching" title="Switching content continuously"/> Switching
+			<!-- table -->
 			<table id="table1">
 				<colgroup>
 					<col width="200"/>
