--- a/example21/index.html
+++ b/example21/index.html
@@ -5,85 +5,83 @@
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../header.js"></script>
-		<script type="text/javascript" src="../redips-drag.js"></script>
+		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<title>Example 21: Shift table content</title>
 	</head>
 	<body>
-		<center>
-			<!-- tables inside this DIV could contain drag-able content  -->
-			<div id="drag">
-				<!-- first table -->
-				<table>
-					<colgroup>
-						<col width="100"/>
-						<col width="100"/>
-						<col width="100"/>
-						<col width="100"/>
-						<col width="100"/>
-						<col width="100"/>
-					</colgroup>
-					<tbody>
-						<tr>
-							<td><div class="drag">A</div></td>
-							<td><div class="drag">B</div></td>
-							<td><div class="drag">C</div></td>
-							<td><div class="drag">D</div></td>
-							<td><div class="drag">E</div></td>
-							<td><div class="drag">F</div></td>
-						</tr>
-						<tr>
-							<td><div class="drag">G</div></td>
-							<td><div class="drag">H</div></td>
-							<td><div class="drag">I</div></td>
-							<td><div class="drag">J</div></td>
-							<td><div class="drag">K</div></td>
-							<td><div class="drag">L</div></td>
-						</tr>
-						<tr>
-							<td><div class="drag">Q</div></td>
-							<td><div class="drag">R</div></td>
-							<td><div class="drag">S</div></td>
-							<td><div class="drag">T</div></td>
-							<td><div class="drag">U</div></td>
-							<td><div class="drag">M</div></td>
-						</tr>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</tbody>
-				</table>
-				<!-- second table with clone element and trash -->
-				<table>
-					<colgroup>
-						<col width="100"/>
-						<col width="100"/>
-					</colgroup>
-					<tbody>
-						<tr>
-							<!-- clone cell is forbidden for any element -->
-							<td class="mark"><div class="drag clone orange">C</div></td>
-							<!-- trash cell -->
-							<td class="trash">Trash</td>
-						</tr>
-					</tbody>
-				</table>
-				<!-- animation checkbox -->
-				<input type="checkbox" class="checkbox" onclick="toggle_animation(this)" title="Enable / disable animation" checked="true"/><span>Animation</span>
-			</div>
-		</center>
+		<!-- tables inside this DIV could contain drag-able content  -->
+		<div id="drag">
+			<!-- first table -->
+			<table>
+				<colgroup>
+					<col width="100"/>
+					<col width="100"/>
+					<col width="100"/>
+					<col width="100"/>
+					<col width="100"/>
+					<col width="100"/>
+				</colgroup>
+				<tbody>
+					<tr>
+						<td><div class="drag">A</div></td>
+						<td><div class="drag">B</div></td>
+						<td><div class="drag">C</div></td>
+						<td><div class="drag">D</div></td>
+						<td><div class="drag">E</div></td>
+						<td><div class="drag">F</div></td>
+					</tr>
+					<tr>
+						<td><div class="drag">G</div></td>
+						<td><div class="drag">H</div></td>
+						<td><div class="drag">I</div></td>
+						<td><div class="drag">J</div></td>
+						<td><div class="drag">K</div></td>
+						<td><div class="drag">L</div></td>
+					</tr>
+					<tr>
+						<td><div class="drag">Q</div></td>
+						<td><div class="drag">R</div></td>
+						<td><div class="drag">S</div></td>
+						<td><div class="drag">T</div></td>
+						<td><div class="drag">U</div></td>
+						<td><div class="drag">M</div></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</tbody>
+			</table>
+			<!-- second table with clone element and trash -->
+			<table>
+				<colgroup>
+					<col width="100"/>
+					<col width="100"/>
+				</colgroup>
+				<tbody>
+					<tr>
+						<!-- clone cell is forbidden for any element -->
+						<td class="mark"><div class="drag clone orange">C</div></td>
+						<!-- trash cell -->
+						<td class="trash">Trash</td>
+					</tr>
+				</tbody>
+			</table>
+			<!-- animation checkbox -->
+			<input type="checkbox" class="checkbox" onclick="toggle_animation(this)" title="Enable / disable animation" checked=""/><span>Animation</span>
+		</div>
 	</body>
 </html>
