--- a/example07/index1.html
+++ b/example07/index1.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="script1.js"></script>
 		<title>Example 7: A B C D</title>
 	</head>
 	<body>
