--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 06<br/><a href="example06/">Scrollable and fixed containers</a></div></td>
-					<td><div id="link1" class="drag t1">Example 07<br/><a href="example07/">A B C D</a></div></td>
+					<td><div id="link1" class="drag t1">Example 07<br/><a href="example07/index1.html">A B C D</a> / <a href="example07/index2.html">E F</a></div></td>
 					<td><div id="link1" class="drag t1">Example 08<br/><a href="example08/">Tables in separated containers</a></div></td>
 				</tr>
 				<tr>
