--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content/rows with JavaScript"/>
+		<meta name="viewport" content="width=device-width, user-scalable=no"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="redips-drag-min.js"></script>
 		<!-- initialize drag and drop -->
@@ -33,7 +34,7 @@
 	<body>
 		<center>
 			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Drag and drop table content/rows with JavaScript - Version 4.5.4</h2>
+			<h2>Drag and drop table content/rows with JavaScript - Version 4.6.0</h2>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
