--- a/example05/index.html
+++ b/example05/index.html
@@ -287,7 +287,7 @@
 			<div id="redips_clone"></div>
 			<!-- message -->
 			<div id="message">
-				Clone element with SHIFT key
+				Elements can be cloned with SHIFT key
 				<br/>
 				Left container has <b>noautoscroll</b> option
 			</div>
