--- a/example13/index.html
+++ b/example13/index.html
@@ -195,7 +195,12 @@
 						</tr>
 					</tbody>
 				</table>
+				<!-- message -->
+				<div class="message">
+					Elements can be cloned with SHIFT key (press SHIFT key and drag element)
+				</div>
 			</div>
+			<br/>
 		</center>
 	</body>
 </html>
