Added link to REDIPS.drag Documentation Appendix - A

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	</head>
 	<body>
 		<center>
-			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Drag and drop table content/rows with JavaScript - Version 4.6.8</h2>
+			<h2><a href="http://www.redips.net/javascript/drag-and-drop-table-content/" title="www.redips.net">REDIPS_drag</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation/" title="REDIPS.drag documentation">Documentation</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation-appendix-a/" title="REDIPS.drag documentation - Appendix A">Appendix A</a></h2>
+			<h3>Drag and drop table content/rows with JavaScript - Version 4.6.8</h3>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
