Added AJAX/jQuery in example00

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</tr>
 				<!-- table data -->
 				<tr>
-					<td><div id="link1" class="drag t1">Example 00<br/><a href="example00/">Minimal steps</a></div></td>
+					<td><div id="link1" class="drag t1">Example 00<br/><a href="example00/index1.html">Minimal steps</a> / <a href="example00/index2.html">AJAX jQuery</a></div></td>
 					<td><div id="link1" class="drag t1">Example 08<br/><a href="example08/">Tables in separated containers</a></div></td>
 					<td><div id="link1" class="drag t1">Example 16<br/><a href="example16/">AJAX, hover, sticky, dragging</a></div></td>
 				</tr>
